권한 ing